--- a/css/main.css
+++ b/css/main.css
@@ -493,6 +493,15 @@ section{
 }
 .footer .text{
     opacity: 0.8;
+
+}
+.footer .text1{
+  /* white-space: nowrap;  */
+  width: 100%; 
+  border: 1px solid #f1f4ec;
+  opacity: 0.8;
+  /* overflow: hidden;
+  text-overflow: ellipsis; */
 }
 .footer-links{
     display: flex;
@@ -585,6 +594,10 @@ section{
     .navbar-brand{
         color: var(--white-smoke);
         font-size: 2rem;
+    }
+    .navbar-brand1{
+        color: var(--white-smoke) !important;
+        font-size: 1rem;
     }
     .navbar-toggler{
         display: none;
